package com.example.myapplication

data class User(
    val username: String, val password: String
) {

}
