package com.example.myapplication.service

data class OrderResponse(
    val status: String, val id: String?, val message: String?
)